# byrdocs-cli

./: .gitignore  LICENSE  README.md  byrdocs.py  pyproject.toml  setup.cfg  test.py
.github/workflows/: build.yml  python-publish.yml
byrdocs/: __init__.py  byrdocs.py  custom_prompt.py  history_manager.py  main_menu.py  requirements.txt  resources.py  yaml_init.py
